tulip: Set config_sustainedPerformanceModeSupported
This config will support the Sustained Performance Mode.

Change-Id: Ic992ea6fd910cf679a940b273c95968f4c60adbb

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -412,4 +412,7 @@
     <!-- If this is true, the screen will fade off. -->
     <bool name="config_animateScreenLights">false</bool>
 
+    <!-- True if the device supports Sustained Performance Mode -->
+    <bool name="config_sustainedPerformanceModeSupported">true</bool>
+
 </resources>
