tulip: Enable zram writeback job scheduler
Bug: 140882488
Change-Id: I5489a7ce7a8d73306a6ecf69f57d338b2b0eaad2
Signed-off-by: Minchan Kim <minchan@google.com>
Signed-off-by: clarencelol <clarencekuiek@icloud.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -406,4 +406,7 @@
         Z
     </string>
 
+    <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
+    <bool name="config_zramWriteback">true</bool>
+
 </resources>
