--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -24,4 +24,8 @@
     <!-- Disable Bluetooth by default -->
     <bool name="def_bluetooth_on">false</bool>
 
+
+    <!-- Disable UI touch sounds by default -->
+    <bool name="def_sound_effects_enabled">false</bool>
+
 </resources>
